plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.kt'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    // fixed mockito error
    testImplementation 'org.mockito:mockito-core:5.+'

    implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	implementation 'org.redisson:redisson-spring-boot-starter:3.32.0'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'

	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'


	compileOnly 'org.projectlombok:lombok'

	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'com.h2database:h2'

	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'com.slack.api:slack-api-client:1.43.1'
    implementation("io.netty:netty-resolver-dns-native-macos:4.1.117.Final:osx-aarch_64")
    implementation("io.netty:netty-resolver-dns:4.1.117.Final")

	//prometheus
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'
}

// fixed mockito error
tasks.withType(Test).configureEach {
    def mockitoCoreJar = configurations.testRuntimeClasspath.find {
        it.name.contains('mockito-core')
    }
    if (mockitoCoreJar != null) {
        jvmArgs "-javaagent:${mockitoCoreJar.absolutePath}"
    }
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.named("bootJar") {
	enabled = true
	archiveFileName = "shopping.jar"
}

tasks.register("zip", Zip.class) {
	dependsOn("bootJar")
	group("build")
	archiveFileName = "shopping.zip"

	from("build/libs/shopping.jar") { into("") }
	from(".ebextensions") { into(".ebextensions") }
	from("profiles/Profile") { into("") }
}